--- a/views/student/student_dashboard.ejs
+++ b/views/student/student_dashboard.ejs
@@ -355,36 +355,38 @@
         // Add event listener for the pageshow event
         window.addEventListener('pageshow', handlePageShow);
 
-        (function () {
-        if (!window.chatbase || window.chatbase("getState") !== "initialized") {
-            window.chatbase = (...arguments) => {
-                if (!window.chatbase.q) {
-                    window.chatbase.q = [];
-                }
-                window.chatbase.q.push(arguments);
-            };
-            window.chatbase = new Proxy(window.chatbase, {
-                get(target, prop) {
-                    if (prop === "q") {
-                        return target.q;
-                    }
-                    return (...args) => target(prop, ...args);
-                }
-            });
-        }
-        const onLoad = function () {
-            const script = document.createElement("script");
-            script.src = "https://www.chatbase.co/embed.min.js";
-            script.id = "qLYGNFlA9LRx8m9Y4vD76";
-            script.domain = "www.chatbase.co";
-            document.body.appendChild(script);
-        };
-        if (document.readyState === "complete") {
-            onLoad();
-        } else {
-            window.addEventListener("load", onLoad);
-        }
-    })();
+    // Chatbase based chatbot
+
+    //     (function () {
+    //     if (!window.chatbase || window.chatbase("getState") !== "initialized") {
+    //         window.chatbase = (...arguments) => {
+    //             if (!window.chatbase.q) {
+    //                 window.chatbase.q = [];
+    //             }
+    //             window.chatbase.q.push(arguments);
+    //         };
+    //         window.chatbase = new Proxy(window.chatbase, {
+    //             get(target, prop) {
+    //                 if (prop === "q") {
+    //                     return target.q;
+    //                 }
+    //                 return (...args) => target(prop, ...args);
+    //             }
+    //         });
+    //     }
+    //     const onLoad = function () {
+    //         const script = document.createElement("script");
+    //         script.src = "https://www.chatbase.co/embed.min.js";
+    //         script.id = "qLYGNFlA9LRx8m9Y4vD76";
+    //         script.domain = "www.chatbase.co";
+    //         document.body.appendChild(script);
+    //     };
+    //     if (document.readyState === "complete") {
+    //         onLoad();
+    //     } else {
+    //         window.addEventListener("load", onLoad);
+    //     }
+    // })();
 
     </script>
 
