Corrected the errors

--- a/views/teacher/teacher_dashboard.ejs
+++ b/views/teacher/teacher_dashboard.ejs
@@ -155,12 +155,12 @@
       <!-- Left Section Cards -->
       <div class="left-section">
         <h2 class="section-title">Welcome, Teacher!</h2>
-        <p class="sections-label">YOUR SECTIONS</p>
+        <p class="sections-label">YOUR STUDENTS</p>
 
         <ul class="section-card-list">
-          <li><div class="section-card"><a href="/teacher_dashboard/section1">Class 5A<br>English</a></div></li>
-          <li><div class="section-card"><a href="/teacher_dashboard/section2">Class 6B<br>Math</a></div></li>
-          <li><div class="section-card"><a href="/teacher_dashboard/section3">Class 7C<br>Science</a></div></li>
+          <li><div class="section-card"><a href="">Student 1</a></div></li>
+          <!-- <li><div class="section-card"><a href="/teacher_dashboard/section2">Class 6B<br>Math</a></div></li>
+          <li><div class="section-card"><a href="/teacher_dashboard/section3">Class 7C<br>Science</a></div></li> -->
         </ul>
       </div>
 
