Created student info page for teacher

--- a/views/teacher/teacher_dashboard.ejs
+++ b/views/teacher/teacher_dashboard.ejs
@@ -141,6 +141,11 @@
     <div class="header">
       <img src="/graphics/Logo.png" alt="Website Logo" />
       <p class="fw-bold">Teacher Dashboard</p>
+      <!-- <div class="nav-links">
+        <div id="my-sections" class="active">Chat</div>
+        <div id="uploads">Uploads</div>
+        <div id="reminders">Work To Do</div>
+      </div> -->
 
       <div class="dropdown">
         <button class="btn btn-light dropdown-toggle" type="button" id="settingsDropdown" data-bs-toggle="dropdown" aria-expanded="false">⚙️</button>
@@ -158,7 +163,7 @@
         <p class="sections-label">YOUR STUDENTS</p>
 
         <ul class="section-card-list">
-          <li><div class="section-card"><a href="">Student 1</a></div></li>
+          <li><div class="section-card"><a href="/student_info_teacher.ejs">Student 1</a></div></li>
           <!-- <li><div class="section-card"><a href="/teacher_dashboard/section2">Class 6B<br>Math</a></div></li>
           <li><div class="section-card"><a href="/teacher_dashboard/section3">Class 7C<br>Science</a></div></li> -->
         </ul>
