--- a/views/student/student_subject.ejs
+++ b/views/student/student_subject.ejs
@@ -18,23 +18,24 @@
         }
         .dashboard {
             background: white;
-            border-radius: 10px;
-            padding: 20px;
+            padding: 0;
             width: 100%;
             height: 100%;
             box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
             display: flex;
             flex-direction: column;
         }
+
         .header {
-            width: 100%;
             display: flex;
             justify-content: space-between;
             align-items: center;
             background: #a7c7e7;
-            padding: 10px;
-            border-radius: 8px;
             font-size: 20px;
+            height: 60px;
+        }
+        .header img {
+            height: 100%;
         }
         .nav-links {
             display: flex;
