Added chatbot for parents

--- a/views/parent/parent_dashboard.ejs
+++ b/views/parent/parent_dashboard.ejs
@@ -185,6 +185,45 @@
     // document.getElementById("uploads").addEventListener("click",()=>window.location.href="/teacher_dashboard/uploads");
     // document.getElementById("reminders").addEventListener("click",()=>window.location.href="/teacher_dashboard/reminders");
     document.getElementById("logout").addEventListener("click",()=>{localStorage.removeItem("token");window.location.href="/login"});
+
+    // Chatbase based chatbot
+
+        (function () {
+        if (!window.chatbase || window.chatbase("getState") !== "initialized") {
+            window.chatbase = (...arguments) => {
+                if (!window.chatbase.q) {
+                    window.chatbase.q = [];
+                }
+                window.chatbase.q.push(arguments);
+            };
+            window.chatbase = new Proxy(window.chatbase, {
+                get(target, prop) {
+                    if (prop === "q") {
+                        return target.q;
+                    }
+                    return (...args) => target(prop, ...args);
+                }
+            });
+        }
+        const onLoad = function () {
+            const script = document.createElement("script");
+            script.src = "https://www.chatbase.co/embed.min.js";
+            script.id = "qLYGNFlA9LRx8m9Y4vD76";
+            script.domain = "www.chatbase.co";
+            document.body.appendChild(script);
+        };
+        if (document.readyState === "complete") {
+            onLoad();
+        } else {
+            window.addEventListener("load", onLoad);
+        }
+    })();
+
   </script>
+
+<!-- <script src="https://cdn.botpress.cloud/webchat/v2.3/inject.js"></script> -->
+<script src="https://files.bpcontent.cloud/2025/03/09/15/20250309154125-ROQMQ6F2.js"></script>
+
+
 </body>
 </html>
