--- a/views/main.ejs
+++ b/views/main.ejs
@@ -45,7 +45,7 @@
         <!-- Add your image here -->
         <img src="./graphics/main.png" alt="Children Illustration" class="img-fluid mb-4" style="max-width: 700px;">
 
-        <h1 class="fw-bold">Personalized Learning Platform</h1>
+        <h1 class="fw-bold">BrainPath</h1>
         <p class="fs-4 fst-italic">a step away from the traditional learning system</p>
 
         <!-- Login Button -->
