--- a/views/student/student_dashboard.ejs
+++ b/views/student/student_dashboard.ejs
@@ -10,6 +10,7 @@
     <!-- Bootstrap Bundle (includes Popper.js) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="/student/css/dashboard.css">
+    <link rel="stylesheet" href="/student/css/header.css">
 
     <style>
         #progress-bar {
